patron tutorial on searching and requesting

--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -24,6 +24,9 @@
 	that you'd like to request, it allows you to ask your home library to try to get it for you.
       </p>
       <br/>
+      <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
+      <br/>
+      <p>Note that, unlike the previous system (Maplin), you will not be sent emails from this system.<p><br/>
       <p>
 	fILL does not keep any record of your searches or requests after your books are returned.  
 	Logging in is necessary for your library to know who is making 	the request, but no information 
