public fILL announcement on library welcome page

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -27,11 +27,17 @@
 
     </td>
     <td style="width:30%">
-      <h2>ILL Stats report</h2>
+      <h2>Public fILL launch!</h2>
       <br/>
-      <p>Click on the 'Info' tab, and then 'Reports' to see your ILL statistics.</p>
+      <p>Public access to fILL is now available to your patrons using the following URL:</p>
+      <p style="text-decoration : underline;"><a href="http://fill.gets-it.net">http://fill.gets-it.net</a></p>
       <br/>
-      <p>The old reporting system is being redesigned. This is the first step; other reports will follow in time.</p>
+      <p>Information for your patrons:</p>
+      <p style="text-decoration : underline;"><a href="/Patron_Guide.pdf">Patron brochure</a></p>
+      <p style="text-decoration : underline;"><a href="/Patrons%20-%20Searching%20tutorial.pdf">Patron tutorial on Searching and Requesting</a></p>
+      <br/>
+      <p>Information for you:</p>
+      <p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
     </td>
   </tr>
 </table>
