minor cosmetic changes, post-launch of Public fILL

--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -19,6 +19,8 @@
       <br />
       <p>This updated system, called 'fILL', gives you a new look and enhanced functionality over the old Maplin system.</p>
       <br/>
+      <p><strong>Please update your bookmarks!</strong></p>
+      <br/>
       <p>
 	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item
 	that you'd like to request, it allows you to ask your home library to try to get it for you.
