public-side only books message

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -120,6 +120,9 @@ $('document').ready(function(){
        <div id="termlist"></div>
      </td>
      <td valign="top">
+      <div id="onlybooks">
+	<p style="background-color: #A2CD5A;">Note that, while items of all types (DVD, CD, etc) may be listed, only books are eligible for interlibrary loan at this time.</p>
+      </div>
       <div id="ranking">
        <form name="select">
         Sort by
