tracking of medium

--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -74,6 +74,7 @@ $('document').ready(function(){
       <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
       <tr><td>Title</td><td>: <TMPL_VAR name="title"></td></tr>
       <tr><td>Author</td><td>: <TMPL_VAR name="author"></td></tr>
+      <tr><td>Medium</td><td>: <font style="background-color: yellow;"><TMPL_VAR name="medium"></font></td></tr>
     </table>
     
     <h3>The title was found at these locations:</h3>
