--- a/templates/search/request_placed.tmpl
+++ b/templates/search/request_placed.tmpl
@@ -43,6 +43,7 @@
       <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
       <tr><td>Title</td><td>: <TMPL_VAR NAME="title"></td></tr>
       <tr><td>Author</td><td>: <TMPL_VAR NAME="author"></td></tr>
+      <tr><td>Medium</td><td>: <font style="background-color: yellow;"><TMPL_VAR name="medium"></font></td></tr>
     </table>
     <p>The following requests have been added to these lender's pending lists:</p>
     <table>
