display medium on incomming patron requests

--- a/templates/public/request_placed.tmpl
+++ b/templates/public/request_placed.tmpl
@@ -30,6 +30,7 @@
       <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
       <tr><td>Title</td><td>: <TMPL_VAR NAME="title"></td></tr>
       <tr><td>Author</td><td>: <TMPL_VAR NAME="author"></td></tr>
+      <tr><td>Medium</td><td>: <font style="background-color: yellow;"><TMPL_VAR name="medium"></font></td></tr>
     </table>
     <p>Your librarian will see if another Manitoba public library is able to lend this title to
       <TMPL_VAR NAME="library"> at this time.</p>
