remove the almost-unused rightcontent css - better uses for that screen real estate!

--- a/htdocs/fILL-public.1.0.css
+++ b/htdocs/fILL-public.1.0.css
@@ -140,9 +140,9 @@ h6
 
 #middlecontent {
   float:left;
-  width:70%;
+  width:80%;
 }
-
+/* DEPRECATED!  middlecontent has expanded from 70% to 80%
 #rightcontent {
   float:left;
   width:10%;
@@ -153,7 +153,7 @@ h6
   padding-bottom: 20px;
   color: #408040;
 }
-
+*/
 /* bottom bar */
 #nav2
 {
