--- a/htdocs/fILL.1.0.css
+++ b/htdocs/fILL.1.0.css
@@ -140,9 +140,10 @@ h6
 
 #middlecontent {
   float:left;
-  width:70%;
+  width:80%;
 }
 
+/* DEPRECATED!  middlecontent has expanded from 70% to 80%
 #rightcontent {
   float:left;
   width:10%;
@@ -153,6 +154,7 @@ h6
   padding-bottom: 20px;
   color: #003399;
 }
+*/
 
 /* bottom bar */
 #nav2
