add medium to respond list

--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/respond-1.11.js"></script>
+<script type="text/javascript" src="/js/respond-1.12.js"></script>
 
 
 <script type="text/javascript">
@@ -51,6 +51,7 @@ $('document').ready(function(){
                            { "mDataProp": "Title" },
                            { "mDataProp": "Note" },
                            { "mDataProp": "Timestamp" },
+                           { "mDataProp": "Medium" },
                            { "mDataProp": "Response" }
                       ]
 
