--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -155,7 +155,7 @@ function ValidateForm(){
 	      <p>Your name:</p>
 	      <input type="text" name="patron_name" size=30 maxlength=50 value="<TMPL_VAR NAME=patron_name>">
 	      <p>Your library card #:</p>
-	      <input type="text" name="patron_card" size=30 value="<TMPL_VAR NAME=patron_card>">
+	      <input type="text" name="patron_card" size=14 maxlength=14 value="<TMPL_VAR NAME=patron_card>">
 	      <p>Your email address:</p>
 	      <input type="text" name="patron_email" size=30 maxlength=50 value="<TMPL_VAR NAME=patron_email>">
 	      <br />
