minor accessibility fixes

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head><title><TMPL_VAR name="pagetitle"></title>
 <link type="text/css" rel="stylesheet" href="/fILL.1.0.css">
 <link type="text/css" rel="stylesheet" href="/feedstyles.1.1.css">
@@ -19,7 +19,7 @@
 
 <script type="text/javascript" src="/plugins/dataTables.fnReloadAjax.js"></script>
 
-<script language="JavaScript">
+<script type="text/javascript">
 
   function set_primary_tab(tab_id) {
     document.getElementById(tab_id).className='current_tab';
@@ -52,8 +52,7 @@
 
 <DIV id="header">
   <div id="logo">
-    <!--div id="logo_title">fILL (Maplin-4)</div-->
-    <img src="/img/fILL.png">
+    <img src="/img/fILL.png" alt="f i l l free open source software interlibrary loan management system">
     <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
   </div>
   <div id="header_quick_access">
@@ -71,43 +70,43 @@
 <div id="csstabs">
   <ul>
     <li id="menu_borrow">
-      <a href=/cgi-bin/lightning.cgi?rm=lightning_search_form>
+      <a href="/cgi-bin/lightning.cgi?rm=lightning_search_form">
       Borrowing from other libraries
       </a>
     </li>
 
     <li id="menu_lend">
-      <a href=/cgi-bin/lightning.cgi?rm=pull_list>
+      <a href="/cgi-bin/lightning.cgi?rm=pull_list">
       Lending to other libraries
       </a>
     </li>
 
     <li id="menu_borrow_current_requests">
-      <a href=/cgi-bin/lightning.cgi?rm=current>
+      <a href="/cgi-bin/lightning.cgi?rm=current">
       Current ILLs
       </a>
     </li>
 
     <li id="menu_borrow_history">
-      <a href=/cgi-bin/lightning.cgi?rm=history>
+      <a href="/cgi-bin/lightning.cgi?rm=history">
       History
       </a>
     </li>
 
     <li id="menu_myaccount">
-      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_settings_form>
+      <a href="/cgi-bin/myaccount.cgi?rm=myaccount_settings_form">
       My Account
       </a>
     </li>
 
     <li id="menu_patrons">
-      <a href=/cgi-bin/patrons.cgi?rm=patrons_form>
+      <a href="/cgi-bin/patrons.cgi?rm=patrons_form">
       Patrons
       </a>
     </li>
 
     <li id="menu_info">
-      <a href=/cgi-bin/info.cgi?rm=info_contacts_form>
+      <a href="/cgi-bin/info.cgi?rm=info_contacts_form">
       Info
       </a>
     </li>
