--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -3,7 +3,7 @@
 <table cellpadding=20>
   <tr>
     <td style="width:385px"> <!-- image is 375px wide -->
-      <img src='/img/card_catalogue.jpg' />
+      <img src='/img/card_catalogue.jpg' alt="picture of a library card catalogue"/>
       <br/>
       <p class="short_instruction">
 	Photo by Flickr user haaaley.  http://flickr.com/photos/misshaley/515045131/
