tweak to due date override, and an update to the welcome page

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -364,12 +364,12 @@ $('document').ready(function(){
 
     <div id="dialog-form" title="Change due date">
       <p class="validateTips">Enter the due date as YYYY-MM-DD</p>
-      <form>
+<!--  <form>  -->
 	<fieldset>
 	  <label for="duedate">New due date</label>
 	  <input type="text" name="duedate" id="duedate" class="text ui-widget-content ui-corner-all" />
 	</fieldset>
-      </form>
+<!--  </form>  -->
     </div>
 
     <div id="tabs">
