--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -25,11 +25,9 @@
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 
-    </td>
-    <td style="width:30%">
-      <h2>Public fILL launch!</h2>
+      <h3>Public fILL</h3>
       <br/>
-      <p>Public access to fILL is now available to your patrons using the following URL:</p>
+      <p>Public access to fILL is available to your patrons using the following URL:</p>
       <p style="text-decoration : underline;"><a href="http://fill.gets-it.net">http://fill.gets-it.net</a></p>
       <br/>
       <p>Information for your patrons:</p>
@@ -38,6 +36,21 @@
       <br/>
       <p>Information for you:</p>
       <p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
+    </td>
+    <td style="width:30%" valign="top">
+      <h3>Need to change a due date?</h3>
+      <br/>
+      <p>If you've shipped a book, but the borrowing library <strong>hasn't received it yet</strong>, you can change the due date:</p>
+      <p><br/>
+	<ol>
+	  <li>In the Current ILLs list Lending tab, find the request. 
+	    (Pro tip: enter the word 'shipped' in the search box at the upper right 
+	    - that will narrow the list down!)</li>
+	  <li>Open the Overrides (far right)</li>
+	  <li>Click 'Change due date', enter the new date, and click 'Ok'.</li>
+	</ol>
+      </p>
+	
     </td>
   </tr>
 </table>
