--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -58,6 +58,7 @@
       <a href="?rm=send_pdf&doc=MultilingualRussian.pdf">Russian</a>
       <a href="?rm=send_pdf&doc=MultilingualSpanish.pdf">Spanish</a>
       <a href="?rm=send_pdf&doc=MultilingualSwahili.pdf">Swahili</a>
+      <a href="?rm=send_pdf&doc=MultilingualTagalog.pdf">Tagalog</a>
       <a href="?rm=send_pdf&doc=MultilingualTigrinya.pdf">Tigrinya</a>
       <a href="?rm=send_pdf&doc=MultilingualUkranian.pdf">Ukranian</a>
     </td>
