--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -1,7 +1,8 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/respond-1.12.js"></script>
+<script type="text/javascript" src="/js/moment.min.js"></script>
+<script type="text/javascript" src="/js/respond-1.13.js"></script>
 
 
 <script type="text/javascript">
@@ -52,6 +53,7 @@ $('document').ready(function(){
                            { "mDataProp": "Note" },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "Medium" },
+                           { "mDataProp": "Hold requested?" },
                            { "mDataProp": "Response" }
                       ]
 
