--- a/templates/submenu_borrow.tmpl
+++ b/templates/submenu_borrow.tmpl
@@ -21,6 +21,12 @@
       </a>
     </li>
 
+    <li id="menu_borrow_holds">
+      <a href=/cgi-bin/lightning.cgi?rm=holds>
+      Holds placed
+      </a>
+    </li>
+
     <li id="menu_borrow_receive">
       <a href=/cgi-bin/lightning.cgi?rm=receive>
       Receiving
