--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -122,7 +122,7 @@ $('document').ready(function(){
      </td>
      <td valign="top">
       <div id="onlybooks">
-	<p style="background-color: #A2CD5A;">Note that, while items of all types (DVD, CD, etc) may be listed, only books are eligible for interlibrary loan at this time.</p>
+	<p style="background-color: #A2CD5A;">Note that, while items of all types (DVD, CD, etc) may be listed, individual libraries may not allow interlibrary loan of audiovisual matierial at this time.</p>
       </div>
       <div id="ranking">
        <form name="select">
