--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -35,8 +35,10 @@ $('document').ready(function(){
   <div id="leftcontent">
     <h2>Instructions</h2>
     <ol>
-      <li>Fill in the number of copies you'd like</li>
-      <li>Enter your patron's barcode or a group identifier</li>
+      <li>Enter your patron's barcode or a group identifier.</li>
+      <li>Fill in the number of copies you'd like.</li>
+      <li>Select whether you are asking for a hold to be placed.</li>
+      <li>Enter any additiona notes that may help the lender.</li>
       <li>Click the "Complete the request" button</li>
     </ol>
     <h2>Information</h2>
@@ -45,21 +47,46 @@ $('document').ready(function(){
 
   <div id="middlecontent">
     <form action="/cgi-bin/lightning.cgi" method="post">
-      <h2>Number of copies</h2>
-      <p>There are <TMPL_VAR name="num_sources"> potential sources.</p>
-      <p>How many copies are you looking for?
-	<input type="text" name="copies_requested" size="4" maxlength="4" value=<TMPL_VAR name="copies_requested">>
-      </p>
-      <h2>Patron barcode</h2>
-      <p>Enter the barcode number of your patron (or a group identifier if you are requesting multiple copies): 
-	<input id="pbarcode" type="text" name="pbarcode" size="14" maxlength="14">
-      </p>
-      <p>Enter any additional notes for the potential lenders: 
-	<input type="text" name="request_note" size="60" maxlength="80">
-      </p>
+      <div id="midcolumncontainer">
+	<div id="midleft">
+	  <div id="midinner">
+	    <h2>Required</h2>
+	    <br/>
+	    <h3>Patron barcode</h3>
+	    <p>Enter the barcode number of your patron (or a group identifier if you are requesting multiple copies): 
+	      <input id="pbarcode" type="text" name="pbarcode" size="14" maxlength="14">
+	    </p>
+	    <br/><br/><br/>
+	    <input type="submit" style="height:50px; min-width:150px; top:75%; display:block; margin:0 auto;" value="Complete the request">
+	  </div>
+	</div>
+	<div id="midright">
+	  <div id="midinner">
+	    <h2>Optional</h2>
+	    <br/>
+	    <h3>Number of copies</h3>
+	    <p>There are <TMPL_VAR name="num_sources"> potential sources.</p>
+	    <p>How many copies are you looking for?
+	      <input type="text" name="copies_requested" size="4" maxlength="4" value=<TMPL_VAR name="copies_requested">>
+	    </p>
+	    <br />
+	    <h3>Ask for holds?</h3>
+	    <p>Would you like to ask the potential lender(s) to place a hold if the title is currently out?</p>
+	    <p>
+	      <input type="radio" name="placeOnHold" value="yes"/> Yes,
+	      <input type="radio" name="placeOnHold" value="no"/> No,
+	      <input type="radio" name="placeOnHold" value="lenderPolicy" checked="yes"/> According to lender's policy
+	    </p>
+	    <br/>
+	    <h3>Additional notes</h3>
+	    <p>Enter any additional notes for the potential lenders: 
+	      <input type="text" name="request_note" size="60" maxlength="80">
+	    </p>
+	  </div>
+	</div>
+      </div>
       <input type="hidden" name="group_id" value=<TMPL_VAR name="group_id">>
       <input type="hidden" name="rm" value="complete_the_request">
-      <input type="submit" value="Complete the request">
     </form>
 
     <!-- 
@@ -71,29 +98,34 @@ $('document').ready(function(){
     
     <br/>
 
-    <h3>Interlibrary Loan request details</h3>
-    <table>
-      <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
-      <tr><td>Title</td><td>: <TMPL_VAR name="title"></td></tr>
-      <tr><td>Author</td><td>: <TMPL_VAR name="author"></td></tr>
-      <tr><td>Medium</td><td>: <font style="background-color: yellow;"><TMPL_VAR name="medium"></font></td></tr>
-    </table>
-    
-    <h3>The title was found at these locations:</h3>
-    <p><em>fILL will automatically determine which lender to try first, to minimize lender workloads.</em></p>
-    <table>
-      <tr><td>symbol</td><td>location</td><td>holding</td><td>callnumber</td><td>net loaned</td></tr>
-      <TMPL_LOOP name="sources">
-	<tr>
-	  <!-- <TMPL_VAR name="lid"> -->
-	  <td><TMPL_VAR name="symbol"></td>
-	  <td><TMPL_VAR name="location"></td>
-	  <td><TMPL_VAR name="holding"></td>
-	  <td><TMPL_VAR name="callnumber"></td>
-	  <td><TMPL_VAR name="net"></td>
-	</tr>
-      </TMPL_LOOP>
-    </table>
+    <div id="midfooter">
+      <div id="midinner">
+	<h2>Information</h2>
+	<h3>Interlibrary Loan request details</h3>
+	<table>
+	  <tr><td>Requesting user</td><td>: <TMPL_VAR NAME="username"></td></tr>
+	  <tr><td>Title</td><td>: <TMPL_VAR name="title"></td></tr>
+	  <tr><td>Author</td><td>: <TMPL_VAR name="author"></td></tr>
+	  <tr><td>Medium</td><td>: <font style="background-color: yellow;"><TMPL_VAR name="medium"></font></td></tr>
+	</table>
+      
+	<h3>The title was found at these locations:</h3>
+	<p><em>fILL will automatically determine which lender to try first, to minimize lender workloads.</em></p>
+	<table>
+	  <tr><td>symbol</td><td>location</td><td>holding</td><td>callnumber</td><td>net loaned</td></tr>
+	  <TMPL_LOOP name="sources">
+	    <tr>
+	      <!-- <TMPL_VAR name="lid"> -->
+	      <td><TMPL_VAR name="symbol"></td>
+	      <td><TMPL_VAR name="location"></td>
+	      <td><TMPL_VAR name="holding"></td>
+	      <td><TMPL_VAR name="callnumber"></td>
+	      <td><TMPL_VAR name="net"></td>
+	    </tr>
+	  </TMPL_LOOP>
+	</table>
+      </div>
+    </div>
     
   </div>
 
