--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -38,6 +38,18 @@
       <p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
     </td>
     <td style="width:30%" valign="top">
+      <h3>Holds</h3>
+      <p>fILL now supports holds handling, in the ILL-standard way!</p>
+      <p>The User's Guide has been updated with more-detailed information, but here are the highlights:</p>
+      <br/>
+      <h4>Borrowing: Asking for holds</h4>
+      <br/>
+      <p>When requesting an ILL, you can now ask the lender if they are willing to place a hold on the title for you.  If the lender places a hold (in their ILS) for you, that request will show up in the new <strong>Borrowing | Holds Placed</strong> tab. When they ship the item, the request automatically moves to your Borrowing | Receiving tab.</p>
+      <br/>
+      <h4>Lending: Placing holds</h4>
+      <br/>
+      <p>Your Lending | Respond list gives you a new option: "Hold placed".  If the borrower has asked if you are willing to place a hold for them, you can (at your discretion) place the hold in your ILS and then indicate here that you've done so.  Any holds you've placed will show up in the new <strong>Lending | On hold</strong> tab.  When the hold is ready, mark it as "Ready to ship" and it will move to your Lending | Shipping list.
+      <br/><br/><br/>
       <h3>Need to change a due date?</h3>
       <br/>
       <p>If you've shipped a book, but the borrowing library <strong>hasn't received it yet</strong>, you can change the due date:</p>
