patrons can check their own request statuses

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -81,6 +81,12 @@
       </a>
     </li>
 
+    <li id="menu_current">
+      <a href="/cgi-bin/public.cgi?rm=current_form">
+      Current borrowing
+      </a>
+    </li>
+
   </ul>
 
 </div>
