--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -91,14 +91,20 @@ $('document').ready(function(){
 <div id="csstabs">
   <ul>
     <li id="menu_search">
-      <a href=/cgi-bin/public.cgi?rm=search_form>
+      <a href="/cgi-bin/public.cgi?rm=search_form">
       Search and request
       </a>
     </li>
 
     <li id="menu_myaccount">
-      <a href=/cgi-bin/public.cgi?rm=myaccount_form>
+      <a href="/cgi-bin/public.cgi?rm=myaccount_form">
       My Account
+      </a>
+    </li>
+
+    <li id="menu_current">
+      <a href="/cgi-bin/public.cgi?rm=current_form">
+      Current borrowing
       </a>
     </li>
 
