minor updates to zServers and some clearer language

--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -75,7 +75,7 @@ $('document').ready(function(){
 	    <p>
 	      <input type="radio" name="placeOnHold" value="yes"/> Yes,
 	      <input type="radio" name="placeOnHold" value="no"/> No,
-	      <input type="radio" name="placeOnHold" value="lenderPolicy" checked="yes"/> According to lender's policy
+	      <input type="radio" name="placeOnHold" value="lenderPolicy" checked="yes"/> At lender's discretion
 	    </p>
 	    <br/>
 	    <h3>Additional notes</h3>
