--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -17,18 +17,24 @@
       <br />
       <p>Welcome to the Manitoba public libraries interlibrary-loan requesting system.</p>
       <br />
-      <p>This updated system, called 'fILL', gives you a new look and enhanced functionality over the old Maplin system.</p>
-      <br/>
-      <p><strong>Please update your bookmarks!</strong></p>
-      <br/>
       <p>
 	fILL enables you to quickly search the catalogues of many Manitoba public libraries at once.  When you find an item
 	that you'd like to request, it allows you to ask your home library to try to get it for you.
       </p>
       <br/>
+      <strong>See the status of your Interlibrary Loan requests!</strong>
+      <p>Click on the new menu item, <strong>Current borrowing</strong>, to see the status of all Interlibrary Loan requests
+	that you currently have active.
+      </p>
+      <p>From this screen, you will be able to tell whether another library has been able to fill your request, when they
+	shipped it, and when your library received it.
+      </p>
+      <p>The list shows only currently active requests - once you've returned an item to your library, and they've returned it
+	to the lending library, the information is removed from the list.
+      </p>
+      <br/>
       <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
       <br/>
-      <p>Note that, unlike the previous system (Maplin), you will not be sent emails from this system.<p><br/>
       <p>
 	fILL does not keep any record of your searches or requests after your books are returned.  
 	Logging in is necessary for your library to know who is making 	the request, but no information 
