fixed a typo in a file name

--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -60,7 +60,7 @@
       <a href="?rm=send_pdf&doc=MultilingualSwahili.pdf">Swahili</a>
       <a href="?rm=send_pdf&doc=MultilingualTagalog.pdf">Tagalog</a>
       <a href="?rm=send_pdf&doc=MultilingualTigrinya.pdf">Tigrinya</a>
-      <a href="?rm=send_pdf&doc=MultilingualUkranian.pdf">Ukranian</a>
+      <a href="?rm=send_pdf&doc=MultilingualUkrainian.pdf">Ukrainian</a>
     </td>
   </tr>
 
