added zServer connectivity test to MyAccount

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -15,6 +15,12 @@
       </a>
     </li>
 
+    <li id="menu_myaccount_test_zserver">
+      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_test_zserver_form>
+      Test my zServer
+      </a>
+    </li>
+
   </ul>
 </div>
 
