added a link to the MARC downloads area for rotation participants

--- a/templates/rotations/receiving.tmpl
+++ b/templates/rotations/receiving.tmpl
@@ -78,6 +78,8 @@ function downloadMarc() {
       <li>Scan barcodes of received titles.</li>
       <li> </li>
       <li>When you've finished receiving the items, click the "Download MARC records" button to get a file of all rotation items currently at your library, suitable for importing into your ILS.</li>
+      <li> </li>
+      <li>Go to the <a href="/rotations-MARC/" style="text-decoration: underline" target="_blank">Download folder</a></li>
     </ol>
   </div>
 
