rotations manager guide added to docs

--- a/templates/info/documents.tmpl
+++ b/templates/info/documents.tmpl
@@ -17,6 +17,8 @@
       <br><a href="?rm=send_pdf&doc=fILL_-_User_Guide.pdf">fILL User's Guide</a>
       <br><a href="?rm=send_pdf&doc=fILL_brochure.pdf">Manitoba Libraries Conference 2012 fILL brochure (3-fold)</a>
       <br>
+      <br><a href="?rm=send_pdf&doc=Rotations_Manager_guide.pdf">Rotations Manager guide</a>
+      <br>
     </td>
   </tr>
 
