pending requests - requests you have made that do not yet have a response from the lender

--- a/templates/submenu_borrow.tmpl
+++ b/templates/submenu_borrow.tmpl
@@ -15,6 +15,12 @@
       </a>
     </li>
 
+    <li id="menu_borrow_noresponse">
+      <a href=/cgi-bin/lightning.cgi?rm=no_response>
+      Pending
+      </a>
+    </li>
+
     <li id="menu_borrow_unfilled">
       <a href=/cgi-bin/lightning.cgi?rm=unfilled>
       Unfilled
