--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -38,6 +38,12 @@
       <p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
     </td>
     <td style="width:30%" valign="top">
+      <h3>Requests that have not (yet) been responded to</h3>
+      <p>There is a new tab under Borrowing: <strong>Pending</strong>.  This is a list of requests you have made that have not had a response yet.</p><br/>
+      <p>This will make it easier for you to try the next lender or cancel the request.</p><br/>
+      <p>For any individual request, fILL sorts the list of potential lenders (a.k.a. "sources") in net-borrower/net-lender order.  The Pending tab gives the first source 3 days to respond before giving you the option to try the next lender.</p>
+      <br/><br/><br/>
+
       <h3>Holds</h3>
       <p>fILL now supports holds handling, in the ILL-standard way!</p>
       <p>The User's Guide has been updated with more-detailed information, but here are the highlights:</p>
@@ -49,20 +55,7 @@
       <h4>Lending: Placing holds</h4>
       <br/>
       <p>Your Lending | Respond list gives you a new option: "Hold placed".  If the borrower has asked if you are willing to place a hold for them, you can (at your discretion) place the hold in your ILS and then indicate here that you've done so.  Any holds you've placed will show up in the new <strong>Lending | On hold</strong> tab.  When the hold is ready, mark it as "Ready to ship" and it will move to your Lending | Shipping list.
-      <br/><br/><br/>
-      <h3>Need to change a due date?</h3>
-      <br/>
-      <p>If you've shipped a book, but the borrowing library <strong>hasn't received it yet</strong>, you can change the due date:</p>
-      <p><br/>
-	<ol>
-	  <li>In the Current ILLs list Lending tab, find the request. 
-	    (Pro tip: enter the word 'shipped' in the search box at the upper right 
-	    - that will narrow the list down!)</li>
-	  <li>Open the Overrides (far right)</li>
-	  <li>Click 'Change due date', enter the new date, and click 'Ok'.</li>
-	</ol>
-      </p>
-	
+
     </td>
   </tr>
 </table>
