--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -33,6 +33,12 @@
       </a>
     </li>
 
+    <li id="menu_info_average_times">
+      <a href=/cgi-bin/info.cgi?rm=info_average_times_form>
+	Average times
+      </a>
+    </li>
+
     <li id="menu_info_feeds">
       <a href=/cgi-bin/info.cgi?rm=info_feeds_form>
       Feeds
