cancel an on-hold request

--- a/templates/search/holds.tmpl
+++ b/templates/search/holds.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<script type="text/javascript" src="/js/holds-1.0.js"></script>
+<script type="text/javascript" src="/js/holds-1.1.js"></script>
 
 
 <script type="text/javascript">
@@ -45,12 +45,11 @@ $('document').ready(function(){
                            { "mDataProp": "Author" },
                            { "mDataProp": "Patron / Group" },
                            { "mDataProp": "Timestamp" },
+                           { "mDataProp": "From ID" },
                            { "mDataProp": "From" },
                            { "mDataProp": "Status" },
                            { "mDataProp": "Message" },
-//                           { "mDataProp": "# sources tried" },
-//                           { "mDataProp": "Total # sources" },
-//                           { "mDataProp": "Next lender?" }
+                           { "mDataProp": "Action" }
                       ]
 
                   });
