--- a/templates/search/on_hold.tmpl
+++ b/templates/search/on_hold.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/on_hold-1.0.js"></script>
+<script type="text/javascript" src="/js/on_hold-1.1.js"></script>
 
 
 <script type="text/javascript">
@@ -66,11 +66,10 @@ $('document').ready(function(){
 
   <div id="leftcontent">
     <h2>Instructions</h2>
-    <ol>
-      <li>If you have placed a hold in your ILS for an ILL request, that request will be listed.</li>
-      <li>When you capture the hold in your ILS (i.e. you have the book in hand, ready to fill the ILL request),
-	click the 'Ready to ship' button.  This will move the request to your 'Shipping' screen.</li>
-    </ol>
+    <p>If you have placed a hold in your ILS for an ILL request, that request will be listed.</p><br/>
+    <p>When you capture the hold in your ILS (i.e. you have the book in hand, ready to fill the ILL request),
+      click the 'Ready to ship' button.  This will move the request to your 'Shipping' screen.</p><br/>
+    <p>If you see a 'Cancelled by borrower' button instead, this means that you don't need to ship the book.  Click the button, and check the book back into your ILS.</p>
   </div>
 
   <div id="middlecontent">
