--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <td style="width:15%"></td>
-    <td style="width:55%">
+    <td style="width:55%; vertical-align: top;">
       <h1>Welcome!</h1>
       <br />
       <p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary-loan requesting system.</p>
@@ -38,6 +38,13 @@
       <p style="text-decoration : underline;"><a href="/Librarian%20-%20How%20to%20handle%20patron%20requests.pdf">How to handle patron requests</a></p>
     </td>
     <td style="width:30%" valign="top">
+      <h3>Cancelling a hold</h3>
+      <p>Borrowers: if a lender has placed a hold for you, that item will show up in the "Borrowing..." | "Holds placed" screen.</p><br/>
+      <p>You can cancel a request that has a hold placed by clicking the <strong>Cancel request</strong> button for it.</p><br/>
+      <p>Lenders: if you have a hold placed in your ILS for a borrower and the borrower cancels the request, it still shows up in your "Lending..." | "On hold" screen.  Instead of the usual "Ready to ship" button (which moves the request to your Shipping screen), that request will now have a <strong>Cancelled by borrower</strong> button, which will close the request and move it to history.  You should then (in your ILS) cancel the hold / check the item back in.</p></br>
+      <p>The "Lending..." | "On hold" tab indicates if you have any borrower requests that have been cancelled, by adding a "/1" after the number of on-hold requests.  So, for example, if you have 5 requests that you have placed holds for, and borrowers have cancelled 2 of those, the tab will show "On hold 3/2" - three active and two cancelled requests.</p>
+      <br/><br/><br/>
+
       <h3>Requests that have not (yet) been responded to</h3>
       <p>There is a new tab under Borrowing: <strong>Pending</strong>.  This is a list of requests you have made that have not had a response yet.</p><br/>
       <p>This will make it easier for you to try the next lender or cancel the request.</p><br/>
