--- a/templates/submenu_rotations.tmpl
+++ b/templates/submenu_rotations.tmpl
@@ -27,6 +27,18 @@
       </a>
     </li>
 
+    <li id="menu_rotations_report_received_counts" style="display:none;">
+      <a href="/cgi-bin/rotations.cgi?rm=report_received_cnt">
+      Report - lib rec'd cnts
+      </a>
+    </li>
+
+    <li id="menu_rotations_report_item_circ_counts" style="display:none;">
+      <a href="/cgi-bin/rotations.cgi?rm=report_item_circs">
+      Report - item circs
+      </a>
+    </li>
+
   </ul>
 </div>
 
